# wtpsplit

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  README_WTP.md  RELEASE.md  RELEASE_GUIDE.md  benchmark.ipynb  benchmark_inference.py  calc_compression_rate.py  commands.txt  get_mem.sh  length_constrained_segmentation_demo.py  models.csv  pyproject.toml  release.sh  requirements.txt  run.sh  run_adapter.sh  run_eval.sh  run_eval_kmer.sh  setup.cfg  setup.py  test.py  test2.py  test_constraints.py  test_length_constraints.py  test_sat.py  test_triton.py  test_triton_simple.py  tpu_START.sh  tpu_starter.sh  train.ipynb  update_version.sh  xla_spawn.py
.github/: dependabot.yaml  dependabot.yml
adapters/: setup.py
benchmarks/: benchmark.py  sample.json  spacy_sentencizer.py
bindings/javascript/: .gitignore  Cargo.toml  build.sh  cypress.json  package-lock.json  package.json
bindings/javascript/cypress/integration/: test.js
bindings/javascript/dev_server/: .gitignore  benchmark.html  benchmark.js  download_models.js  index.html  index.js  package-lock.json  package.json  prepare_data.js  test.js  webpack.config.js
bindings/javascript/src/: lib.rs  tensorflowjs_backend.rs  tractjs_backend.rs
bindings/javascript/test/: test.js
bindings/javascript/tests/: test.js
bindings/javascript/www/: index.js  package-lock.json  package.json  webpack.config.js
bindings/python/: Cargo.build.toml  Cargo.toml  Makefile  dev_requirements.txt
bindings/python/.cargo/: config.toml
bindings/python/benches/: benchmark.py
bindings/python/src/: backend.py  lib.rs  onnxruntime_backend.rs  pytorch_backend.rs
bindings/python/tests/: test.rs  test_nnsplit.py
configs/: bertchar_mini_stratify_0.1.json  bertchar_tiny_stratify_0.1.json  canine_no_stratify_3layers.json  canine_stratify_0.1_12layers_long.json  canine_stratify_0.1_12layers_long_no_la.json  canine_stratify_0.1_1layer_long.json  canine_stratify_0.1_1layer_long_no_la.json  canine_stratify_0.1_3layers_long.json  canine_stratify_0.1_3layers_long_no_la.json  canine_stratify_0.1_3layers_long_subsample25.json  canine_stratify_0.1_3layers_long_subsample50.json  canine_stratify_0.1_3layers_long_subsample75.json  canine_stratify_0.1_3layers_lookahead_128.json  canine_stratify_0.1_3layers_no_aux.json  canine_stratify_0.1_3layers_no_aux_training.json  canine_stratify_0.1_3layers_shared_lang_adapter.json  canine_stratify_0.1_6layers_long.json  canine_stratify_0.1_6layers_long_no_la.json  canine_stratify_0.1_9layers_long.json  canine_stratify_0.1_9layers_long_no_la.json  canine_stratify_0.1_debug.json  sat_12l.json  sat_12l_no_ll.json  sat_12l_only_clean.json  sat_1l.json  sat_1l_no_ll.json  sat_3l.json  sat_3l_no_ll.json  sat_3l_only_clean.json  sat_6l copy.json  sat_6l_no_ll.json  sat_9l.json  sat_9l_no_ll.json  xlmr_12l_baseline_lyrics.json  xlmr_stratify_0.1_12layers_p_v3.json  xlmr_stratify_0.1_3layers.json  xlmr_stratify_0.1_3layers_100k.json  xlmr_stratify_0.1_3layers_1e-5.json  xlmr_stratify_0.1_3layers_400k_3e-4.json  xlmr_stratify_0.1_3layers_bs128.json  (+25 more)
data/: de.pt  extra_langs.csv  language_info.csv  lyrics_langs.csv  punctuation_xlmr_top10_with.txt  punctuation_xlmr_top10_without.txt  punctuation_xlmr_top15_with.txt  punctuation_xlmr_top15_without.txt  punctuation_xlmr_top20_with.txt  punctuation_xlmr_top20_without.txt  punctuation_xlmr_top25_with.txt  punctuation_xlmr_top25_without.txt  punctuation_xlmr_top30_with.txt  punctuation_xlmr_top30_without.txt  punctuation_xlmr_top5_with.txt  punctuation_xlmr_top5_without.txt  sample-monolingual.xml
docs/: LENGTH_CONSTRAINTS.md  TRITON_GUIDE.md
evaluation_results/: wtp-bert-tiny_intrinsic_results.json  wtp-canine-s-1l-no-adapters_intrinsic_results.json  wtp-canine-s-1l_intrinsic_results.json  wtp-canine-s-3l-no-adapters_intrinsic_results.json  wtp-canine-s-6l-no-adapters_intrinsic_results.json
js_lib/: Makefile  README.md  index.html  package-lock.json  package.json  webpack.config.js
nnsplit/: Cargo.toml  models.csv
nnsplit/examples/: benchmark.rs  cli.rs
nnsplit/src/: lib.rs  model_loader.rs  tch_rs_backend.rs  tract_backend.rs
nnsplit/tests/: test.rs
python-wheel/: nnsplit-0.5.0_post0-cp36-cp36m-macosx_10_7_x86_64.whl  nnsplit-0.5.0_post0-cp36-cp36m-manylinux1_x86_64.whl  nnsplit-0.5.0_post0-cp36-none-win_amd64.whl  nnsplit-0.5.0_post0-cp37-cp37m-macosx_10_7_x86_64.whl  nnsplit-0.5.0_post0-cp37-cp37m-manylinux1_x86_64.whl  nnsplit-0.5.0_post0-cp37-none-win_amd64.whl  nnsplit-0.5.0_post0-cp38-cp38-macosx_10_7_x86_64.whl  nnsplit-0.5.0_post0-cp38-cp38-manylinux1_x86_64.whl  nnsplit-0.5.0_post0-cp38-none-win_amd64.whl  nnsplit-0.5.1_post0-cp36-cp36m-macosx_10_7_x86_64.whl  nnsplit-0.5.1_post0-cp36-cp36m-manylinux1_x86_64.whl  nnsplit-0.5.1_post0-cp36-none-win_amd64.whl  nnsplit-0.5.1_post0-cp37-cp37m-macosx_10_7_x86_64.whl  nnsplit-0.5.1_post0-cp37-cp37m-manylinux1_x86_64.whl  nnsplit-0.5.1_post0-cp37-none-win_amd64.whl  nnsplit-0.5.1_post0-cp38-cp38-macosx_10_7_x86_64.whl  nnsplit-0.5.1_post0-cp38-cp38-manylinux1_x86_64.whl  nnsplit-0.5.1_post0-cp38-none-win_amd64.whl
python_lib/: .gitignore  Makefile  README.md  pyproject.toml
python_lib/nnsplit/: __init__.py  defaults.py  models.py  tokenizer.py  train.py  utils.py
python_lib/nnsplit/train/: __init__.py  dataset.py  labeler.py  models.py
python_lib/tests/: test_nnsplit.py
rust_lib/: Cargo.toml  README.md  build.rs
rust_lib/benches/: bench_nnsplit.rs
rust_lib/examples/: cli.rs
rust_lib/src/: lib.rs  main.rs
rust_lib/tests/: test.rs
scripts/: benchmark_timing.py  capture_outputs.py  compare_outputs.py  compute_sentence_stats.py  export_all_to_onnx.sh  export_to_onnx.py  export_to_onnx_charbert.py  export_to_onnx_sat-sm.py  export_to_onnx_sat.py  export_to_triton.py  find_common_punctuation.py  find_common_punctuation_xlmr.py  intrinsic_eval_all.sh  lyrics_eval_all.sh  smoke_real_text.py
train/: .gitignore  __init__.py  dataset.py  evaluate.ipynb  evaluate.py  labeler.py  model.py  models.py  requirements.txt  setup.cfg  text_data.py  train.ipynb  utils.py
utils/: clean_tweets.py  (+1 more)
(+399 files in other folders)
