[package]
name = "nnsplit"
version = "0.3.0-post"
authors = ["Benjamin Minixhofer <bminixhofer@gmail.com>"]
edition = "2018"

description = "Fast, robust sentence splitting with bindings for Python, Rust and Javascript."
repository = "https://github.com/bminixhofer/nnsplit"
homepage = "https://github.com/bminixhofer/nnsplit"
documentation = "https://github.com/bminixhofer/nnsplit"
keywords = ["pytorch", "deep-learning", "machine-learning", "tokenizer", "sentencizer"]
categories = ["science"]
license = "MIT"
readme = "README.md"

include = ["src/*.rs", "tests/*.rs", "build.rs", "data"]

[dependencies]
ndarray = "0.13"
thiserror = "1.0"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
tch = {version = "0.1.7", optional = true}
directories = {version = "2.0", optional = true}
minreq = {version = "2.1.1", features = ["https"], optional = true}
url = {version = "2.1.1", optional = true}

[dev-dependencies]
serde_json = "1.0"
quickcheck_macros = "0.9"
quickcheck = "0.9"
rand = "0.7"

[features]
default = []

tch-rs-backend = ["tch"]
model-loader = ["directories", "minreq", "url"]

[[example]]
path = "examples/benchmark" # somehow `cargo package` doesn't work without explicitly setting path
name = "benchmark"
required-features = ["tch-rs-backend", "model-loader"]

[[example]]
path = "examples/cli" # somehow `cargo package` doesn't work without explicitly setting path
name = "cli"
required-features = ["tch-rs-backend", "model-loader"]
