[tool.poetry]
name = "nnsplit"
version = "0.2.1"
description = "Fast, robust sentence splitting with bindings for Python, Rust and Javascript."
readme = "README.md"
authors = ["Benjamin Minixhofer <bminixhofer@gmail.com>"]
include = ["nnsplit/data", "README.md"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
torch = "^1.4"
numpy = "^1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
fastai = "^1.0.60"
tqdm = "^4.42.0"
lxml = "^4.5.0"
tensorflow = "^2.1.0"
somajo = "^2.0.1"
tensorflowjs = "^1.5.2"
scikit-learn = "^0.22.1"
pandas = "^1.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
