# also change Cargo.build.toml when changing this file, workaround for package name and extension-module
[package]
name = "nnsplit-python"
version = "0.5.4"
authors = ["Benjamin Minixhofer <bminixhofer@gmail.com>"]
edition = "2018"

[package.metadata.maturin]
requires-dist = ["onnxruntime==1.4", "tqdm>=4"]

[lib]
name = "nnsplit_python"

[dependencies]
ndarray = "=0.13.0"
numpy = "0.12.2"
lazy_static = "1.4"
serde_json = "1.0"

[dependencies.nnsplit]
path = "../../nnsplit"
default-features = false
features = ["model-loader"]

[dependencies.pyo3]
version = "0.12"
